@@ -1,3 +1,7 @@
+2013-04-27  Xavier Perseguers  <xavier@causal.ch>
+
+	* [TASK] Use platform-dependent directory separator
+
 2013-04-23  Xavier Perseguers  <xavier@causal.ch>
 
 	* [TASK] .rst and .py files should be treated as text files
